--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,13 @@
 @import '~mdb-ui-kit/css/mdb.min.css';
+
+body {
+  background-image: url("../img/city.jpg");
+  background-size: cover;
+  .main {
+    width: 50vw;
+    margin: 0 auto;
+    .content {
+      width: 1300px;
+    }
+  }
+}
